# amic-0

./: .travis.yml  CMakeLists.txt  Makefile  README.md
cmake/: macros.cmake  test_macros.cmake  vhdl_macros.cmake
hdl/: Makefile
hdl/src/: basic_register.vhd  control_store.vhd  datapath.vhd  memory_interface.vhd  shifter.vhd
hdl/test/: alu_tb.vhd  basic_register_tb.vhd  memory_interface_tb.vhd  shifter_tb.vhd
mal/: uprogram
src/main/: CMakeLists.txt
src/main/ajvm/: program.ajvm
src/main/mal/: ajvm.mal  ijvm.mal
src/main/vhdl/: CMakeLists.txt  alu.vhd  basic_register.vhd  common_defs.vhd  control_store.vhd  control_unit.vhd  data_memory.vhd  datapath.vhd  device_mux.vhd  dp_ar_ram.vhd  processor.vhd  program_store.vhd  pwm.vhd  shifter.vhd  system.vhd
src/test/: CMakeLists.txt
src/test/vhdl/: CMakeLists.txt  alu_tb.vhd  basic_register_tb.vhd  control_unit_tb.vhd  datapath_tb.vhd  memory_interface_tb.vhd  processor_tb.vhd
util/: words_to_hdl.py
util/python/: words_to_hdl.py
